# imgui-template

./: .clang-format  CMakeLists.txt  glad.c  imgui.ini  main.cpp
